--- a/FashionMnistClassification/FashionMnist.ipynb
+++ b/FashionMnistClassification/FashionMnist.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "<center><font size=\"6\">Fashion Mnist Project<font size=\"3\"> <br>\n",
         "Course : Deep Learning <br>\n",
-        "Team :  <br> Gkountoumas Filippos <br>Papadopoulos Nikos"
+        "Papadopoulos Nikos"
       ]
     },
     {
